# dbt-feature-flags

./: CHANGELOG.md  README.md  pyproject.toml  zzz_dbt_feature_flags.pth
.10x/evidence/: 2026-07-05-pr-issue-follow-up.md  2026-07-05-quality-optimization.md  2026-07-05-uv-migration.md
.10x/evidence/.storage/quality-2026-07-05/: codeql-baseline.sarif  codeql-final.sarif  coverage-after.json  coverage-baseline.json  coverage-final.json  coverage-source-after.json  coverage-source-final.json  deptry-after.json  osv-baseline.json  radon-cc-baseline.json  radon-cc-final.json  radon-hal-baseline.json  radon-hal-final.json  radon-mi-baseline.json  radon-mi-final.json  radon-raw-baseline.json  radon-raw-final.json  semgrep-baseline.json  semgrep-final.json
.10x/evidence/.storage/quality-2026-07-05/jscpd-after-dedupe/: jscpd-report.json
.10x/evidence/.storage/quality-2026-07-05/jscpd-baseline/: jscpd-report.json
.10x/evidence/.storage/quality-2026-07-05/jscpd-final/: jscpd-report.json
.10x/evidence/.storage/quality-2026-07-05/jscpd-final-clean/: jscpd-report.json
.10x/knowledge/: optional-provider-sdk-dependencies.md
.10x/reviews/: 2026-07-05-pr-issue-follow-up-review.md  2026-07-05-quality-optimization-review.md
.10x/tickets/: 2026-07-05-pr-issue-follow-up.md  2026-07-05-uv-migration-quality-optimization.md
.10x/tickets/done/: 2026-07-05-pr-issue-follow-up.md  2026-07-05-uv-migration-quality-optimization.md
.changes/: 0.3.3.md  0.4.0.md  0.4.1.md  0.5.0.md  0.5.1.md
.github/workflows/: run-tests.yml
dbt_feature_flags/: __init__.py  base.py  fme.py  harness.py  launchdarkly.py  mock.py  patch.py  preflight.py
tests/: test_dbt_feature_flags.py
