[tool.poetry]
name = "dbt-feature-flags"
version = "0.3.3"
description = "Use feature flags in dbt models"
authors = ["z3z1ma <butler.alex2010@gmail.com>"]
include = ["zzz_dbt_feature_flags.pth"]
readme = "README.md"
repository = "https://github.com/z3z1ma/dbt-feature-flags"
homepage = "https://github.com/z3z1ma/dbt-feature-flags"

[tool.poetry.dependencies]
python = ">=3.8,<4"
harness-featureflags = "^1.1.0"
dbt-core = ">=1.1.0,<1.3.0"
launchdarkly-server-sdk = "^7.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
