[project]
name = "dbt-feature-flags"
version = "0.5.2"
description = "Use feature flags in dbt models"
authors = [{ name = "z3z1ma", email = "butler.alex2010@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["dbt-core>=1.0.0,<2"]

[project.urls]
Homepage = "https://github.com/z3z1ma/dbt-feature-flags"
Repository = "https://github.com/z3z1ma/dbt-feature-flags"

[project.optional-dependencies]
# SDK dependencies are optional; install only the provider you need.
harness = ["harness-featureflags>1,<2"]
fme = ["splitio-client>=10,<11"]
launchdarkly = ["launchdarkly-server-sdk>=7,<9"]

[project.scripts]
dbt-ff-preflight = "dbt_feature_flags.preflight:cli"

[dependency-groups]
dev = ["pytest>=5.2"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbt_feature_flags"]
force-include = { "zzz_dbt_feature_flags.pth" = "zzz_dbt_feature_flags.pth" }
